Entering and persisting to do items

--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -8,16 +8,16 @@
     <title>Login</title>
 </head>
 <body class="vh-100 d-flex justify-content-center align-items-center">    
-    <div class = "container center-container">          
+    <div class = "container">          
                
-        <div class = "row align-items-center justify-content-center">
+        <div class = "row">
             <div class = "col-12">
                 <p class = "display-4">My To-Do App</p>
             </div>     
                    
         </div>
 
-        <div class = "row align-items-center justify-content-center">
+        <div class = "row">
             <div class = "col-12 col-lg-6">                
                 {% load static %}
                 <img src = "{% static 'images/planahead.jpg' %}" class = "img-fluid">
