--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -29,7 +29,7 @@
                     {{ form.as_p }}                                       
                     <button type="submit" class = "btn btn-primary">Login</button>
                     <a href="#"> Forgot password?</a> 
-                    <a href="#" class = "d-block">New user? Sign up </a>
+                    <a href="signup/" class = "d-block">New user? Sign up </a>
                 </form>
             </div>
         </div>       
